[gd_scene load_steps=8 format=2]

[ext_resource path="res://Character.gd" type="Script" id=1]
[ext_resource path="res://Control/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Control/outline_shader.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=4]
height = 8.0

[node name="Character" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 19
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -15 )
vframes = 8
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, -10 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( -1, -10 )
shape = SubResource( 4 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="input_event" from="InteractArea" to="." method="_on_InteractArea_input_event"]
[connection signal="mouse_entered" from="InteractArea" to="." method="_on_InteractArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_InteractArea_mouse_exited"]

[editable path="Hurtbox"]
